--- a/index.Rmd
+++ b/index.Rmd
@@ -5,10 +5,16 @@
 
 <img src="images/emily_2.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left">
 
-I like to analyze data to answer research questions and test hypotheses. Currently I investigate questions related to breast cancer through my work as a Research Biostatistician at [Memorial Sloan Kettering Cancer Center](https://www.mskcc.org/departments/epidemiology-biostatistics) in the department of Epidemiology & Biostatistics. 
+I am a result oriented individual with strengths in Nano-Optics and Photonics. I am interested in the field of data science and applying it to the field of Optics. Will help technology professionals and their team to design future generations of revolutionary products. 
 
-I graduated from the [University of Minnesota](http://www.sph.umn.edu/academics/divisions/biostatistics/) with a MS in biostatistics in 2010. In 2012 I began working toward my DrPH in biostatistics as a part-time student at [Columbia University](https://www.mailman.columbia.edu/become-student/departments/biostatistics), where I am investigating statistical methods for the study of etiologic heterogeneity in epidemiologic studies under the advisement of [Dr. Shuang Wang](https://www.mailman.columbia.edu/people/our-faculty/sw2206) at Columbia University and [Dr. Colin Begg](https://www.mskcc.org/profile/colin-begg) at Memorial Sloan Kettering Cancer Center. I expect to graduate by the end of 2018.
+Currently, I am involved in the design, simulation and analysis of complex plasmonic structures, which have novel applications in field of Optics and communications.
 
-I am a well-known R enthusiast, including serving on the board and being an active member of [R Ladies NYC](http://www.rladiesnyc.org/). 
+Key skills
+- Computer Simulations and Data Analysis
+- Project Management
+- Team management
+- Writing and Editing
+
+I believe, my existing skills and knowledge can add value in the Corporate Function Research and Technology.
 
 My full CV is available [here](files/Zabor_CV_2017_Q4.pdf).
